--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<link href+"https://soulthi.github.io/certificard/style.css" rel="stylesheet" />
+<script src="https://soulthi.github.io/certificard/scripts.js"></script>
+
 <body>
   <div class="container">
   <header class="cabecalho">
