--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link href+"https://soulthi.github.io/certificard/style.css" rel="stylesheet" />
+<link href="https://soulthi.github.io/certificard/style.css" rel="stylesheet" />
 <script src="https://soulthi.github.io/certificard/scripts.js"></script>
 
 <body>
