--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
+      <li class="projetos-item"><p> Super-Trunfo</p>
+        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="yLpOrVz" data-user="soulthi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/soulthi/pen/yLpOrVz">
+  Super Trunfo - Dia 8</a> by Tiago Soares de Souza (<a href="https://codepen.io/soulthi">@soulthi</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+  
+</li>
      
   </main>
   </div>
